testsuite/gnatprove/tests/ug__ownership_transfer/test.out
 error: dereference from "X" is not writable
--> ownership_transfer.adb:13:06
   13 |       X.all := X.all + 1;  --  illegal
      |       ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information

 error: dereference from "X" is not readable
--> ownership_transfer.adb:13:15
   13 |       X.all := X.all + 1;  --  illegal
      |                ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information

 error: dereference from "X" is not writable
--> ownership_transfer.adb:14:06
   14 |       X.all := 1;          --  illegal
      |       ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information

 error: dereference from "X" is not readable
--> ownership_transfer.adb:15:15
   15 |       Tmp   := X.all;      --  illegal
      |                ~~^~~
      + object was moved at line 11 [E0010]
   11 |       Y := X;
      |            ^
      + launch "gnatprove --explain=E0010" for more information
gnatprove: error during flow analysis and proof
